--- a/resources/css/ui-content.css
+++ b/resources/css/ui-content.css
@@ -504,7 +504,7 @@
 /* func-card-list */
 .fund-card-list {}
 .fund-card-list .fund-card:not(:last-child) {margin-bottom:16px;}
-.fund-card {position:relative;border-radius:16px;background-color:var(--surface-surface);box-shadow:0px 8px 16px -4px rgba(0, 0, 0, 0.05);padding:24px;--fund-zIndex:1;transition:none}
+.fund-card {position:relative;border-radius:12px;background-color:var(--surface-surface);box-shadow:0px 8px 16px -4px rgba(0, 0, 0, 0.05);padding:24px;--fund-zIndex:1;transition:none}
 .fund-card .clip {position:relative;top:-26px;z-index:var(--fund-zIndex);}
 
 .fund-card .tag-wrap {display:flex;gap:4px;flex-wrap:wrap;padding-right:38px;}
@@ -553,7 +553,7 @@
 .fund-detail-title .body-xlarge {margin-top:16px;text-align:center;word-break:keep-all;padding:0 4px;}
 .fund-detail-title .tag-wrap-bottom {margin-top:16px;}
 
-.fund-detail-rate {border-radius:8px;background:var(--surface-surface);box-shadow:0px 8px 16px -4px rgba(0, 0, 0, 0.05);padding:32px 0;}
+.fund-detail-rate {border-radius:12px;background:var(--surface-surface);box-shadow:0px 8px 16px -4px rgba(0, 0, 0, 0.05);padding:32px 0;}
 .fund-detail-rate .title-large {text-align:center;}
 .fund-detail-rate .expect-list {display:flex;align-items:center;margin-top:16px;padding:0 8px;gap:4px;}
 .fund-detail-rate .expect-list .list {display:flex;flex-direction:column;gap:16px;text-align:center;flex:1;}
@@ -615,7 +615,7 @@
 /* customer-card-list */
 .customer-card-list {}
 .customer-card-list .search-result {display:block;text-align:center;font-size:18px;font-weight:500;color:var(--typography-gray);line-height:1;margin-bottom:24px;}
-.customer-card-list .customer-card {display:block;border-radius:16px;background-color:var(--surface-surface);box-shadow:0px 8px 16px -4px rgba(0, 0, 0, 0.05);padding:24px;width:100%;}
+.customer-card-list .customer-card {display:block;border-radius:12px;background-color:var(--surface-surface);box-shadow:0px 8px 16px -4px rgba(0, 0, 0, 0.05);padding:24px;width:100%;}
 .customer-card-list .customer-card:not(:last-child) {margin-bottom:12px;}
 .customer-card-list .customer-card .title-medium {margin-bottom:12px;}
 .customer-card-list .customer-card .group {padding:0;}
@@ -732,7 +732,7 @@ button.flag-fluid span {margin-top:0;}
 
 /* exchange-wrap */
 .exchange-wrap {background-color:var(--background-bg_lightGray);padding:16px;}
-.exchange-list {padding:16px 20px;border-radius:16px;background-color:var(--surface-surface);}
+.exchange-list {padding:16px 20px;border-radius: 10px;background-color:var(--surface-surface);}
 .exchange-list:not(:last-child) {margin-bottom:12px;}
 
 /* community-wrap */
@@ -1042,11 +1042,11 @@ button.flag-fluid span {margin-top:0;}
 .stock.steady:before {content:'';flex:0 0 10px;width:10px;height:10px;background:url(/resources/images/ico/ico_steady.svg) center center / contain no-repeat;}
 
 
-.stock-index-core {border-radius:8px;background-color:var(--surface-surface);box-shadow:0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);padding:16px 8px;}
+.stock-index-core {border-radius: 10px;background-color:var(--surface-surface);box-shadow:0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);}
 .stock-index-core ul {display:flex;}
 .stock-index-core ul li {position:relative;flex:1;}
-.stock-index-core ul li:not(:last-child):after {content:'';position:absolute;right:0;top:0;background-color:var(--border-8);width:1px;height:100%;}
-.stock-index-core a {display:block;}
+.stock-index-core ul li:not(:last-child) {border-right:1px dashed var(--border-8);}
+.stock-index-core a {display:block;padding: 20px 8px;}
 .stock-index-core dl {text-align:center;}
 .stock-index-core dl dt {margin-bottom:16px;font-size:15px;font-weight:500;color:var(--typography-black);line-height:1;}
 .stock-index-core dl dd {}
@@ -1057,7 +1057,7 @@ button.flag-fluid span {margin-top:0;}
 .stock-index-list {}
 .stock-index-list ul li {}
 .stock-index-list > ul li:not(:last-child) {margin-bottom:12px;}
-.stock-index-list a {display:flex;align-items:center;justify-content:space-between;border-radius:12px;background-color:var(--surface-surface);box-shadow:0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);padding:14px 16px 16px 24px;gap:16px;}
+.stock-index-list a {display:flex;align-items:center;justify-content:space-between;border-radius: 10px;background-color:var(--surface-surface);box-shadow:0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);padding:14px 16px 16px 24px;gap:16px;}
 .stock-index-list a:after {content:'';display:flex;align-items:center;justify-content:center;flex:0 0 10px;width:10px;height:20px;
     -webkit-mask-position:center center;
     mask-position:center center;
@@ -1092,7 +1092,7 @@ button.flag-fluid span {margin-top:0;}
 .stock-detail-title dl dt {text-align:center;}
 .stock-detail-title dl dd {display:flex;align-items:center;justify-content:center;gap:8px;margin-top:20px;}
 .stock-detail .favorite-btn-wrap {position:absolute;right:0;top:16px;}
-.stock-detail .stock-graph {border-radius:8px;background-color:var(--surface-surface);box-shadow:0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);}
+.stock-detail .stock-graph {border-radius:12px;background-color:var(--surface-surface);box-shadow:0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);}
 
 .stock-rate {border-radius:8px;background-color:var(--surface-surface50);padding:4px;}
 .stock-rate dl {display:flex;align-items:center;justify-content:center;gap:4px;}
@@ -1137,7 +1137,7 @@ i.live-off {display:inline-block;width:9px;height:9px;background:url(/resources/
 /* eco-section */
 .eco-section {background-color:var(--background-bg_lightGray);}
 .eco-wrap .tags-wrap {display:flex;flex-direction:column;gap:8px;align-items:center;}
-.eco-wrap .eco-list {display:block;padding:14px 16px 16px;background-color:var(--surface-surface);border-radius:12px;box-shadow:0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);}
+.eco-wrap .eco-list {display:block;padding:14px 16px 16px;background-color:var(--surface-surface);border-radius:10px;box-shadow:0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);}
 .eco-wrap .eco-list:not(:last-child) {margin-bottom:12px;}
 .eco-list .eco-title {display:flex;align-items:center;gap:6px;}
 
