--- a/html/components/component_input_text.html
+++ b/html/components/component_input_text.html
@@ -217,24 +217,21 @@
 					</dd>
 				</dl>
 				<dl>
-					<dt>inner label</dt>
+					<dt>input-medium</dt>
 					<dd>
 						<div class="form">
 							<div class="label"></div>
-							<div class="input-wrap input-placeholder input-inner-text">
+							<div class="input-wrap input-placeholder input-medium">
 								<div class="visible-placeholder">매월 같은 날</div>
 								<input type="number" class="ar" placeholder="1" aria-label="반복주기">
 								<div class="visible-placeholder">일에</div>
 							</div>
 						</div>
 					</dd>
-				</dl>
-				<dl>
-					<dt>inner label</dt>
 					<dd>
 						<div class="form">
 							<div class="label"></div>
-							<div class="input-wrap input-placeholder input-inner-text">
+							<div class="input-wrap input-placeholder input-medium">
 								<input type="number" class="ar" placeholder="1" aria-label="주">
 								<div class="visible-placeholder">주마다</div>
 								<button type="button" class="text-button ar" data-placeholder="월"></button>
