--- a/resources/css/ui-default.css
+++ b/resources/css/ui-default.css
@@ -2,9 +2,19 @@
 
 :root {
     -webkit-tap-highlight-color:transparent;
-    
 }
-
+::-webkit-scrollbar {
+width: 10px;
+}
+::-webkit-scrollbar-thumb {
+background-color: #2f3542;
+border-radius: 10px;
+}
+::-webkit-scrollbar-track {
+background-color: grey;
+border-radius: 10px;
+box-shadow: inset 0px 0px 5px white;
+}
 /* Reset */
 html,body,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,form,fieldset,p,input,textarea,i,u,em,strong,b,a,button,th,td,code,figure,figcaption,picture,object{margin:0;padding:0;}
 h1,h2,h3,h4,h5,strong {font-weight:700;}
