--- a/resources/css/ui-content.css
+++ b/resources/css/ui-content.css
@@ -1064,6 +1064,60 @@ button.flag-fluid span {margin-top:0;}
 .message-notice {}
 .message-notice strong {display:block;font-size:15px;font-weight:700;line-height:1;margin-bottom:8px;}
 
+/* message loading */
+/*animation*/
+.chat-loading {}
+.chat-loading .spinner {display:inline-flex;border-radius:100px;padding:14px;gap:4px;background-color:var(--surface-surface);}
+.chat-loading.show .spinner {animation:slide-in-fwd-left-spinner 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;}
+.chat-loading.hide .spinner {animation:slide-in-fwd-left-spinner-hide 0.55s linear both;}
+
+.chat-loading .spinner > div {width:8px;height:8px;border-radius:100%;display:inline-block;animation:chat-loading-spinner 0.8s infinite ease-in-out forwards;background-color:#8d8d8d;}
+.chat-loading .spinner > div + div {}
+.chat-loading .spinner > div:nth-child(1) {transform:translateX(-6px);transition:all 0.4s cubic-bezier(0, 0.45, 0.46, 2);transition-delay:0.4s;animation-delay:0.1s;}
+.chat-loading .spinner > div:nth-child(2) {transform:translateX(-3px);transition:all 0.4s cubic-bezier(0, 0.45, 0.46, 2);transition-delay:0.4s;animation-delay:0.2s;}
+.chat-loading .spinner > div:nth-child(2) {animation-delay:0.3s;}
+.chat-loading.show .spinner > div:nth-child(1) {transform:translateX(0);}
+.chat-loading.show .spinner > div:nth-child(2) {transform:translateX(0);}
+.chat-loading.hide .spinner > div:nth-child(1) {transform:translateX(-6px);transition:transform 0.4s ease;transition-delay:0.6s;}
+.chat-loading.hide .spinner > div:nth-child(2) {transform:translateX(-3px);transition:transform 0.4s ease;transition-delay:0.6s;}
+.chat-loading .spinner .bounce1 {animation-delay:-0.32s;}
+.chat-loading .spinner .bounce2 {animation-delay:-0.16s;}
+/* loading dots background-color */
+@keyframes chat-loading-spinner {
+	0%, 80%, 100% {
+		background:var(--surface-surface200);
+	}
+	40% {
+		background:var(--surface-surface500);
+	}
+}
+
+
+@keyframes slide-in-fwd-left-spinner {
+	0% {
+        transform:translateX(-200%);
+	}
+	90% {
+        transform:translateX(3%);
+	}
+	100% {
+        transform:translateX(0);
+        transform:none;
+	}
+}
+@keyframes slide-in-fwd-left-spinner-hide {
+	0% {
+        transform:translateX(0);
+	}
+	50% {
+        transform:translateX(3%);
+	}
+	100% {
+        transform:translateX(-200%);
+	}
+}
+
+
 /* stock-index */
 .stock-index {}
 .stock {justify-content:center;font-size:15px;font-weight:400;line-height:1;}
