--- a/resources/css/ui-content.css
+++ b/resources/css/ui-content.css
@@ -891,6 +891,7 @@ button.flag-fluid span {margin-top:0;}
 .chatbody {padding:0 20px;}
 .chatbody:after {content:'';display:block;clear:both;}
 .chatbody:not(:last-child) {margin-bottom:32px;}
+.chatbottom {display:flex;align-items:flex-end;height:0;}
 .message-text {position:relative;display:table;border-radius:8px;background-color:var(--surface-surface);box-shadow:0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);}
 .message-text > *:not(:last-child) {margin-bottom:16px;}
 .message-text .text {font-size:16px;font-weight:500;color:var(--typography-black);}
