--- a/html/layout/loader.html
+++ b/html/layout/loader.html
@@ -59,7 +59,7 @@
 
 
 <body>
-	<script src="/resources/plugins/dotlottie-web/dotlottie-player.mjs" type="module"></script>
+	<script src="/resources/plugins/dotlottie-web/dotlottie-player.js" type="module"></script>
 
 	<div class="loader-wrap">
 		<dotlottie-player src="/resources/lottie/loader.json" background="transparent" speed="1" style="width: 200px; height:100%" direction="1" playMode="normal" loop autoplay></dotlottie-player>
