--- a/html/layout/loader.html
+++ b/html/layout/loader.html
@@ -59,10 +59,12 @@
 
 
 <body>
-	<script src="/resources/plugins/dotlottie-web/dotlottie-player.js" type="module"></script>
+	<script src="/resources/plugins/dotlottie-web/dotlottie-player.js"></script>
+	<!-- <script src="https://unpkg.com/@dotlottie/player-component@1.0.0/dist/dotlottie-player.js"></script> -->
+
 
 	<div class="loader-wrap">
-		<dotlottie-player src="/resources/lottie/loader.json" background="transparent" speed="1" style="width: 200px; height:100%" direction="1" playMode="normal" loop autoplay></dotlottie-player>
+		<dotlottie-player src="/resources/lottie/loader.lottie" background="transparent" speed="1" style="width: 200px; height:100%" direction="1" mode="normal" loop autoplay></dotlottie-player>
 	</div>
 
 
