--- a/html/components/component_input_checkbox.html
+++ b/html/components/component_input_checkbox.html
@@ -128,6 +128,33 @@
 							</div>
 						</div>
 					</dd>
+					<dt>disabled</dt>
+					<dd>
+						<div class="inp-column-list">
+							<div class="inp inp-medium">
+								<label>
+									<input type="checkbox" disabled>
+									<span class="label-title">텍스트를 입력해주세요</span>
+								</label>
+							</div>
+							<div class="stroke my16"></div>
+							<div class="inp inp-medium">
+								<label>
+									<input type="checkbox" checked disabled>
+									<span class="label-title">텍스트를 입력해주세요</span>
+									<span class="label-subtitle">서브텍스트를 입력해주세요</span>
+								</label>
+							</div>
+							<div class="stroke my16"></div>
+							<div class="inp inp-medium">
+								<label>
+									<input type="checkbox" checked disabled>
+									<span class="label-title">텍스트를 입력해주세요 텍스트를 입력해주세요 텍스트를 입력해주세요</span>
+									<span class="label-subtitle">서브텍스트를 입력해주세요 서브텍스트를 입력해주세요 서브텍스트를 입력해주세요</span>
+								</label>
+							</div>
+						</div>
+					</dd>
 				</dl>
 			</div>
 		</div>
