--- a/resources/css/ui-content.css
+++ b/resources/css/ui-content.css
@@ -410,6 +410,8 @@
 .bs-card .bottom ul {display:flex;gap:10px;flex-wrap:wrap;}
 .bs-card .bottom ul li {font-size:8px;font-weight:400;color:var(--typography-gray);line-height:1.3;}
 
+.bs-card figure picture {display:flex;width:46px;height:59px;align-items:center;justify-content:center;}
+.bs-card figure picture img {object-fit:contain;width:100%;height:100%;}
 
 /* info-anchor */
 .info-anchor {padding:8px 16px 18px;background-color:var(--white-100);}
@@ -994,12 +996,12 @@ button.flag-fluid span {margin-top:0;}
 
 .file-attach-list a {display:inline-flex;border-radius:4px;background-color:var(--surface-surface50);padding:4px 8px;gap:10px;}
 .file-attach-list a:before {content:'';display:table-cell;flex:0 0 22px;width:22px;height:22px;background:url(/resources/images/PBWAI/ico_file_attach.svg) center center / contain no-repeat;}
-.file-attach-list a[data-ext="word"]:before {background:url(../images/PBWAI/ico_file_attach_word.svg) center center / contain no-repeat;}
-.file-attach-list a[data-ext="excel"]:before {background:url(../images/PBWAI/ico_file_attach_excel.svg) center center / contain no-repeat;}
-.file-attach-list a[data-ext="hwp"]:before {background:url(../images/PBWAI/ico_file_attach_hwp.svg) center center / contain no-repeat;}
-.file-attach-list a[data-ext="img"]:before {background:url(../images/PBWAI/ico_file_attach_img.svg) center center / contain no-repeat;}
-.file-attach-list a[data-ext="pdf"]:before {background:url(../images/PBWAI/ico_file_attach_pdf.svg) center center / contain no-repeat;}
-.file-attach-list a[data-ext="ppt"]:before {background:url(../images/PBWAI/ico_file_attach_ppt.svg) center center / contain no-repeat;}
+.file-attach-list a[data-ext="word"]:before {background:url(/resources/images/PBWAI/ico_file_attach_word.svg) center center / contain no-repeat;}
+.file-attach-list a[data-ext="excel"]:before {background:url(/resources/images/PBWAI/ico_file_attach_excel.svg) center center / contain no-repeat;}
+.file-attach-list a[data-ext="hwp"]:before {background:url(/resources/images/PBWAI/ico_file_attach_hwp.svg) center center / contain no-repeat;}
+.file-attach-list a[data-ext="img"]:before {background:url(/resources/images/PBWAI/ico_file_attach_img.svg) center center / contain no-repeat;}
+.file-attach-list a[data-ext="pdf"]:before {background:url(/resources/images/PBWAI/ico_file_attach_pdf.svg) center center / contain no-repeat;}
+.file-attach-list a[data-ext="ppt"]:before {background:url(/resources/images/PBWAI/ico_file_attach_ppt.svg) center center / contain no-repeat;}
 
 .file-attach-list a:after {content:'';display:table-cell;flex:0 0 20px;width:20px;height:22px;background:url(/resources/images/PBWAI/ico_file_attach_download.svg) center center / 20px 20px no-repeat;}
 .file-attach-list a.link:after {flex:0 0 6px;width:6px;height:22px;
