--- a/resources/css/ui-layout.css
+++ b/resources/css/ui-layout.css
@@ -534,7 +534,21 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .box {padding:60px 24px;}
 
 /* loader-wrap */
-.loader-wrap {position:fixed;left:0;top:0;width:100%;height:100%;z-index:var(--loader-zIndex);display:flex;align-items:center;justify-content:center;overflow:hidden;}
+.loader-wrap {position:fixed;left:0;top:0;width:100%;height:100%;z-index:var(--loader-zIndex);display:flex;align-items:center;justify-content:center;overflow:hidden;gap:20px;}
+.loader-wrap:before,
+.loader-wrap:after {content:'';display:flex;flex:0 0 30px;width:30px;height:30px;border-radius:50%;}
+.loader-wrap:before {background-color:#5BABFB;animation:loader-left 1.4s linear infinite;}
+.loader-wrap:after {background-color:#2658ED;animation:loader-right 1.4s linear infinite;}
+@keyframes loader-left {
+    0% {transform:translateX(0);}
+    50% {transform:translateX(50px);}
+    100% {transform:translateX(0);}
+}
+@keyframes loader-right {
+    0% {transform:translateX(0);}
+    50% {transform:translateX(-50px);}
+    100% {transform:translateX(0);}
+}
 
 /* chart-wrap */
 .chart-wrap {background-color:var(--background-bg_lightGray);border-radius:8px;}
