--- a/resources/css/ui-variable.css
+++ b/resources/css/ui-variable.css
@@ -173,7 +173,7 @@
     --button-ghostw-enabled:#FFFFFF00;
     --button-ghostw-onDisabled:#FFFFFF3D;
     --button-ghostw-onEnabled:#FFFFFFF5;
-    --button-ghostw-pressed:##FFFFFF29;
+    --button-ghostw-pressed:#FFFFFF29;
     --button-outlined-border:#0C0C0D1F;
     --button-outlined-disabled:#7786973D;
     --button-outlined-enabled:#FFFFFF;
