--- a/html/components/component_business_card.html
+++ b/html/components/component_business_card.html
@@ -103,6 +103,7 @@
 												<source srcset="/resources/images/bs_card/bs_a_center_logo01.svg">
 												<img src="/resources/images/bs_card/bs_a_center_logo01.svg" alt="우리금융그룹">
 											</picture>
+											<object type="image/svg+xml" data="/resources/images/bs_card/bs_b_center_logo01.svg"></object>
 										</div>
 										<div class="right">
 											<dl>
@@ -191,6 +192,7 @@
 													<img src="/resources/images/bs_card/bs_photo.svg" alt="">
 												</picture>
 											</figure>
+											<object type="image/svg+xml" data="/resources/images/bs_card/bs_b_center_logo01.svg"></object>
 										</div>
 										<div class="right">
 											<dl>
@@ -280,6 +282,7 @@
 												<source srcset="/resources/images/bs_card/bs_a_center_logo01.svg">
 												<img src="/resources/images/bs_card/bs_a_center_logo01.svg" alt="우리금융그룹">
 											</picture>
+											<object type="image/svg+xml" data="/resources/images/bs_card/bs_b_center_logo01.svg"></object>
 										</div>
 										<div class="right">
 											<dl>
