--- a/resources/css/ui-layout.css
+++ b/resources/css/ui-layout.css
@@ -430,14 +430,25 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 }
 
 .main-nav {background-color:var(--background-bg_white);box-shadow:0px 2px 30px -4px rgba(0, 0, 0, 0.15);}
-.main-nav ul {display:flex;padding:0 12px;}
+.main-nav ul {display:flex;padding:10px 12px 2px;gap:8px;}
 .main-nav ul li {flex:1;}
-.main-nav ul li a {display:flex;flex-direction:column;align-items:center;justify-content:center;padding:18px 0 20px;gap:8px;}
+.main-nav ul li a {display:flex;flex-direction:column;align-items:center;justify-content:center;padding:12px 0 10px;gap:8px;border-radius:18px;}
 .main-nav ul li a .icon {position:relative;width:32px;height:32px;}
-.main-nav ul li a strong {font-size:15px;font-weight:500;color:var(--gray-500);line-height:1;}
-.main-nav ul li.is-current .icon i {background-color:var(--icon-default)!important;}
+.main-nav ul li a strong {font-size:16px;font-weight:500;color:var(--gray-500);line-height:1;}
+.main-nav ul li.is-current a {background-color:var(--surface-surface50);}
 .main-nav ul li.list05.not-read .icon:before {content:'';position:absolute;right:0;top:0;width:6px;height:6px;background-color:var(--yellow-600);border-radius:50%;}
-.main-nav ul li.is-current strong {color:var(--typography-black);font-weight:700;}
+.main-nav ul li.is-current strong {color:var(--brandPrimary-blue600);font-weight:700;}
+
+.main-nav ul li.list01 a .icon {background:url(/resources/images/PBWMA/ico-main-nav01.svg) center center / contain no-repeat;}
+.main-nav ul li.list02 a .icon {background:url(/resources/images/PBWMA/ico-main-nav02.svg) center center / contain no-repeat;}
+.main-nav ul li.list03 a .icon {background:url(/resources/images/PBWMA/ico-main-nav03.svg) center center / contain no-repeat;}
+.main-nav ul li.list04 a .icon {background:url(/resources/images/PBWMA/ico-main-nav04.svg) center center / contain no-repeat;}
+.main-nav ul li.list05 a .icon {background:url(/resources/images/PBWMA/ico-main-nav05.svg) center center / contain no-repeat;}
+.main-nav ul li.list01.is-current a .icon {background:url(/resources/images/PBWMA/ico-main-nav01-current.svg) center center / contain no-repeat;}
+.main-nav ul li.list02.is-current a .icon {background:url(/resources/images/PBWMA/ico-main-nav02-current.svg) center center / contain no-repeat;}
+.main-nav ul li.list03.is-current a .icon {background:url(/resources/images/PBWMA/ico-main-nav03-current.svg) center center / contain no-repeat;}
+.main-nav ul li.list04.is-current a .icon {background:url(/resources/images/PBWMA/ico-main-nav04-current.svg) center center / contain no-repeat;}
+.main-nav ul li.list05.is-current a .icon {background:url(/resources/images/PBWMA/ico-main-nav05-current.svg) center center / contain no-repeat;}
 
 
 /* btn-wrap */
