--- a/resources/css/ui-layout.css
+++ b/resources/css/ui-layout.css
@@ -385,11 +385,11 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .content .bottom-btn .btn-wrap {padding:12px 16px;}
 .content .bottom-btn .btn-wrap.btn-nowrap {padding:8px 16px;}
 
-.financial-player {background-color:var(--surface-surface900);border-radius:20px 20px 0 0;padding:12px 16px;display:flex;align-items:center;justify-content:space-between;}
+.financial-player {background-color:rgba(31, 40, 54, 0.95);border-radius:31px;padding:8px 16px;display:flex;align-items:center;justify-content:space-between;margin:0 13px 16px;}
 .financial-player-title {display:flex;gap:8px;align-items:center;justify-content:center;}
 .financial-player-title strong {font-size:18px;font-weight:700;color:var(--typography-white);line-height:1;}
-.financial-player-controller {display:flex;gap:14px;align-items:center;justify-content:center;}
-.financial-player-controller button {display:flex;flex:0 0 46px;width:46px;height:46px;align-items:center;justify-content:center;border-radius:8px;background-color:var(--surface-surface100);}
+.financial-player-controller {display:flex;gap:10px;align-items:center;justify-content:center;}
+.financial-player-controller button {display:flex;flex:0 0 46px;width:46px;height:46px;align-items:center;justify-content:center;}
 .financial-player .soundwave-container {flex:0 0 16px;width:16px;height:16px;display:flex;align-items:flex-end;justify-content:space-between;gap:3px;padding:1px 2px;}
 
 .financial-player .soundwave-container .bar {width:2px;background:var(--white-24);border-radius:2px;}
@@ -428,6 +428,9 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
     96% {height:70%;}
     100% {height:80%;}
 }
+
+.modal__footer .financial-player {display:inline-flex;gap:16px;}
+.modal__footer .financial-player-title strong {display:none;}
 
 .main-nav {background-color:var(--background-bg_white);box-shadow:0px 2px 30px -4px rgba(0, 0, 0, 0.15);}
 .main-nav ul {display:flex;padding:10px 12px 2px;gap:8px;}
