--- a/resources/css/ui-plugins.css
+++ b/resources/css/ui-plugins.css
@@ -421,9 +421,9 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 
 .datepicker-wrap .ui-datepicker .ui-datepicker-buttonpane button {float:none;opacity:1;display:inline-flex;align-items:center;justify-content:center;height:32px;font-size:16px;border-width:1px;border-radius:8px;padding:6px 12px;white-space:nowrap;text-align:center;vertical-align:top;gap:4px;line-height:18px;background-color:var(--button-outlined-enabled);color:var(--button-outlined-onEnabled);border-color:var(--button-outlined-border);border-style:solid;margin:0;}
 
-.datepicker-wrap .ui-state-disabled,
+/* .datepicker-wrap .ui-state-disabled,
 .datepicker-wrap .ui-widget-content .ui-state-disabled,
-.datepicker-wrap .ui-widget-header .ui-state-disabled {opacity:1;}
+.datepicker-wrap .ui-widget-header .ui-state-disabled {opacity:1;} */
 
 .datepicker-wrap .ui-datepicker .ui-datepicker-buttonpane {display:flex;margin:0;border:0;}
 
